# sphinx-tests

./: .buildinfo  .gitignore  LICENSE  README.md  Test1.html  Test2.html  api.html  articles.html  build.sh  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: Test1.doctree  Test2.doctree  api.doctree  articles.doctree  environment.pickle  index.doctree
.doctrees/nbsphinx/: Test2.ipynb
.github/workflows/: sphinx.yml
_sources/: api.rst.txt  index.rst.txt
docs/: Test1.ipynb  Test2.ipynb  api.rst  articles.rst  conf.py
docs/.ipynb_checkpoints/: Test1-checkpoint.ipynb  Test2-checkpoint.ipynb
foo/: __init__.py  foo.py
foo.egg-info/: PKG-INFO  SOURCES.txt
